ft/src/tui/snapshots/ft__tui__tests__sync_indicator_in_status_bar_80x24.snap
---
source: ft/src/tui/tests.rs
expression: frame
---
  1 Graph  │  2 Tasks  │  3 Notes  │  4 Timeblocks                              
 1: (empty)                                                                     
                                                                                
press / to edit query                                                           
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
>                                                                               
 vault: test-vault  ·  tab: Graph           not yet refreshed   ⟳ sync · normal
