ft/src/tui/snapshots/ft__tui__tests__tasks_tab_empty_80x24.snap
---
source: ft/src/tui/tests.rs
assertion_line: 106
expression: frame
---
  1 Graph  │  2 Tasks  │  3 Notes  │  4 Timeblocks  │  5 Journal  │  6 Review   
┌ sidebar ─────────────┐┌ query ───────────────────────────────────────────────┐
│                      ││status in {Open, InProgress} and due < 2026-05-18     │
│ Sun 10 May           │└──────────────────────────────────────────────────────┘
│ 14:32:05             │┌ tasks ───────────────────────────────────────────────┐
│                      ││                   no matching tasks                  │
│ ── views ──          ││                                                      │
│ ▶ Search             ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
└──────────────────────┘└──────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Tasks          refreshed [HH:MM:SS]      mode: normal
