ft/src/tui/snapshots/ft__tui__tests__tasks_tab_parse_error_80x24.snap
---
source: ft/src/tui/tests.rs
expression: frame
---
  1 Graph  │  2 Tasks  │  3 Notes  │  4 Timeblocks  │  5 Journal  │  6 Review   
┌ query ───────────────────────────────────────────────────────────────────────┐
│totally bogus                                                                 │
└──────────────────────────────────────────────────────────────────────────────┘
┌ tasks ───────────────────────────────────────────────────────────────────────┐
│                                                                              │
│                               query parse error                              │
│                                                                              │
│                   unknown attribute `totally` at position 0                  │
│                                                                              │
│                           press / to edit the query                          │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Tasks          refreshed [HH:MM:SS]      mode: normal
