ft/src/tui/snapshots/ft__tui__tests__timeblocks_tab_empty_100x24.snap
---
source: ft/src/tui/tests.rs
assertion_line: 255
expression: frame
---
  1 Welcome  │  2 Tasks  │  3 Notes  │  4 Timeblocks                                                
┌ sidebar ─────────────┐┌ Sun 2026-05-10 (today) ────────────┐┌ Mon 2026-05-11 (tomorrow) ─────────┐
│                      ││                                    ││                                    │
│ Sun 10 May           ││  no daily note yet.                ││  no daily note yet.                │
│ 14:32:05             ││  press `c` to create from template ││  press `c` to create from template │
│                      ││                                    ││                                    │
│ ── totals · 2026-05-1││                                    ││                                    │
│ total 00:00          ││                                    ││                                    │
│                      ││                                    ││                                    │
│ ── focus ──          ││                                    ││                                    │
│ ▶ 2026-05-10         ││                                    ││                                    │
│ view: split          ││                                    ││                                    │
│                      ││                                    ││                                    │
│                      ││                                    ││                                    │
│                      ││                                    ││                                    │
│                      ││                                    ││                                    │
│                      ││                                    ││                                    │
│                      ││                                    ││                                    │
│                      ││                                    ││                                    │
│                      ││                                    ││                                    │
│                      ││                                    ││                                    │
│                      ││                                    ││                                    │
└──────────────────────┘└────────────────────────────────────┘└────────────────────────────────────┘
 vault: test-vault  ·  tab: Timeblocks                   not yet refreshed             mode: normal
