ft/src/tui/snapshots/ft__tui__tests__welcome_tab_80x24.snap
---
source: ft/src/tui/tests.rs
expression: frame
---
  1 Welcome  │  2 Tasks  │  3 Notes                                             
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
         ██╗    ██╗███████╗██╗      ██████╗ ██████╗ ███╗   ███╗███████╗         
         ██║    ██║██╔════╝██║     ██╔════╝██╔═══██╗████╗ ████║██╔════╝         
         ██║ █╗ ██║█████╗  ██║     ██║     ██║   ██║██╔████╔██║█████╗           
         ██║███╗██║██╔══╝  ██║     ██║     ██║   ██║██║╚██╔╝██║██╔══╝           
         ╚███╔███╔╝███████╗███████╗╚██████╗╚██████╔╝██║ ╚═╝ ██║███████╗         
          ╚══╝╚══╝ ╚══════╝╚══════╝ ╚═════╝ ╚═════╝ ╚═╝     ╚═╝╚══════╝         
                                                                                
                  to ft — your terminal companion for Obsidian                  
                                vault: test-vault                               
               press any key to continue · q to quit · ? for help               
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 vault: test-vault  ·  tab: Welcome         not yet refreshed      mode: normal
